--- a/README.Rmd
+++ b/README.Rmd
@@ -12,525 +12,737 @@ always_allow_html: true
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
+  comment  = "#>",
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
 ```
 
-# NicheR: An R package for ellipsoid-based virtual species and niche visualization in E-space and G-space
+# NicheR: Ellipsoid-Based Virtual Species and Niche Visualization in E-space and G-space
 
-The goal of **NicheR** is to provide a robust set of tools for researchers and modelers to:  
+NicheR is an R package for building, visualizing, and sampling
+**ellipsoid-based ecological niches** using environmental data.  
 
-   - Construct and define virtual niches using ellipsoid geometries in 2D or 3D environmental dimensions.  
-  - Identify and extract suitable environmental areas from various data sources (rasters, data frames).  
-  - Simulate species occurrence points within suitable habitats using flexible sampling strategies (random, center-biased, or edge-biased).  
-  - Visualize niche boundaries and simulated occurrences in both environmental space (E-space) and geographic space (G-space).  
+It provides:
 
-Inspired by the methodologies of **NicheA** and the **virtualspecies** R package, **NicheR** streamlines niche conceptualization and data generation for ecological studies.
+- Explicit ellipsoid construction in n-dimensional environmental space.  
+- Efficient detection of suitable environments using Mahalanobis distance.  
+- Sampling of virtual occurrences with flexible strategies and optional bias.  
+- Visualization tools in environmental space (E-space) and geographic space (G-space).  
+- A unified R-native workflow, with both high-level and low-level functions.
 
+Inspired by the conceptual foundations of **NicheA** and the scripting
+flexibility of the **virtualspecies** package, **NicheR** provides a
+reproducible, scriptable ecosystem for virtual species simulation and
+niche theory exploration.
 
-## Authors 
+---
 
-Mariana Castaneda-Guzman
+## Authors
 
-Paanwaris Paansri
-
-Connor Hughes
+- Mariana Castaneda-Guzman  
+- Paanwaris Paansri  
+- Connor Hughes  
 
 ## Last Updated
 
-11/14/2025
+11/19/2025
+
+---
 
 ## Installation
 
-You can install the development version of NicheR from GitHub as follows:
+You can install the development version of NicheR from GitHub:
 
-```{r echo =TRUE, eval = FALSE}
-# 1. Install devtools if you don't have it yet
+```{r eval = FALSE}
+# 1. Install devtools if you do not have it yet
 if (!require("devtools")) {
- install.packages("devtools")
+  install.packages("devtools")
 }
 
-# 2. Install bean from GitHub
+# 2. Install NicheR from GitHub
 devtools::install_github("castanedaM/NicheR")
 ```
 
-Dependencies NicheR relies on the following R packages, which will be installed automatically with the package: dplyr, ggplot2, ggpubr,
-plotly, RColorBrewer, and terra.
+**Dependencies**
 
-## Example Application
+NicheR relies on the following R packages (installed automatically when
+you install NicheR):
 
-This is a basic example demonstrating the core functionality of NicheR.
-Before you start, remember the distinction between what the package handles internally and what requires user input. You will need:
+- `terra` – raster / spatial data handling  
+- `ggplot2`, `ggpubr` – plotting and layout  
+- `plotly`, `rgl` – interactive and 3D visualization  
+- `RColorBrewer` – color palettes  
+- plus standard base/system packages
 
-  1. Environmental layers (raster layers), and
+---
 
-  2. (Optional) a bias surface if you wish to include one.
+# Quick Start: Full Workflow in One Step
 
-For this example, we provide both the environmental layers and a sample bias surface.
+The easiest way to use NicheR is through the high-level wrapper
+`create_virtual_species()`, which:
 
+1. Builds an ellipsoid niche in E-space  
+2. Computes suitable environments  
+3. Samples occurrence records  
 
-### 1. Define Environmental Backskground 
-
-Your environmental background, also refered to as environmental predictors, will be the base on which your virtual species will be build. 
-
-
-```{r}
+```{r message = FALSE, warning = FALSE}
 library(NicheR)
 library(terra)
-library(ggplot2)
-library(ggpubr)
-library(rgl)
-library(plotly)
 
-
-# Access example environmental raster files from the package
-# Make sure "Bio1.tif", "Bio4.tif", "Bio12.tif" exist in inst/extdata
-bio_1 <- terra::rast(system.file("extdata", "Bio1.tif", package = "NicheR"))
-bio_4 <- terra::rast(system.file("extdata", "Bio4.tif", package = "NicheR"))
+# Example environmental data included with the package
+bio_1  <- terra::rast(system.file("extdata", "Bio1.tif",  package = "NicheR"))
+bio_4  <- terra::rast(system.file("extdata", "Bio4.tif",  package = "NicheR"))
 bio_12 <- terra::rast(system.file("extdata", "Bio12.tif", package = "NicheR"))
 
-# Stack and name the environmental layers
+# BIO1 = Annual Mean Temperature
+# BIO12 = Annual Precipitation
+# BIO4 = Temperature Seasonality (standard deviation ×100)
+
 env_stack <- c(bio_1, bio_12, bio_4)
-names(env_stack) <- c("mean_temp", "temp_seasonality", "annual_precip")
+names(env_stack) <- c("mean_temp", "annual_precip", "temp_seasonality")
 
-# Convert the raster stack to a data frame for E-space plotting
-env_df <- as.data.frame(env_stack, xy = TRUE, na.rm = TRUE)
-```
-
-
-### 2. Create your virtual Species
-
-Now that the environmental background has been loaded and prepared, the next step is to define the virtual species.
-
-In this package, you can do this in two ways:
-
-  1. Using `create_virtual_species()`, a high-level function that creates the virtual species in a single step, or 
-  2. Running each individual function separately for greater control.
-
-Below, we demonstrate both approaches—first using the high-level function, and then showing each step individually.
-
-
-#### High-Level Approach
-
-In this step, we specify the virtual species’ niche characteristics and generate the species using create_virtual_species().
-
-    center: defines the environmental centroid of the species’ niche (in this case, mean temperature, temperature seasonality, and annual precipitation).
-
-    axes: controls the spread or tolerance along each environmental variable.
-
-    angles: defines the rotation of the ellipsoid in environmental space (set to 0 for no rotation).
-
-    env_bg: the environmental background raster stack used to project suitability.
-
-    n_occ: number of occurrence points to sample from the suitability surface.
-
-    out: determines which outputs are returned ("both" returns suitability and occurrences).
-
-    distances: whether to calculate distances from the niche centroid.
-
-    out.file: if TRUE, saves results to a file.
-
-The resulting object includes the species’ suitability surface, sampled occurrences, and internal parameters used to generate them.
-
-
-```{r}
-
-# Define niche parameters (can also be defined in the create_virtual_species function)
-niche_center <- c(mean_temp = 200,
-                  temp_seasonality = 1000,
-                  annual_precip = 6500)
-niche_axes <- c(75, 250, 2000) 
-niche_angles <- c(0, 0, 0) 
-
-
-
-nicheR_vs <- create_virtual_species(env_bg = env_stack,
-                                             center = niche_center,
-                                             axes = niche_axes,
-                                             angles = niche_angles,
-                                             n_occ = 100,
-                                             out = "both",
-                                             distances = TRUE,
-                                             out.file = FALSE)
-
-```
-
-And here are the final visuals of our virtual species. For additional visuals and customization options, see the Step-by-Step Approach section.
-
-```{r}
-plot_e_space(env_bg = env_stack,
-             x = "mean_temp",
-             y = "temp_seasonality",
-             z = "annual_precip",
-             labels = c("Mean T (°C)",
-                        "Temp Seasonality", 
-                        "Annual Prec (mm)"),
-             niche = nicheR_vs$niche,
-             palette = "default",
-             show.pts.in = TRUE,
-             occ_pts = nicheR_vs$occurrences)
-
-```
-
-
-
-```{r}
-
-plot_g_space(env_bg = nicheR_vs$call_args$env_bg,
-             niche = nicheR_vs$niche,
-             show.suitable = TRUE,
-             show.distance = TRUE,
-             occ_pts = nicheR_vs$occurrences)
-```
-
-
-
-#### Step-by-Step Approach
-
-
-##### 1. Build a 3D Ellipsoid Niche The build_ellipsoid() function creates
-
-the core niche object by specifying its center, semi-axis lengths, and
-rotation angles.
-
-```{r}
 # Define niche parameters
-niche_center <- c(mean_temp = 280, temp_seasonality = 1500, annual_precip = 2000)
-niche_axes <- c(100, 500, 2500) # Semi-axis lengths (breadth)
-niche_angles <- c(0, 0, pi/12) # Small rotation around Z-axis
+niche_center <- c(mean_temp = 200,
+                  annual_precip = 1000,
+                  temp_seasonality = 6500)
+niche_axes <- c(75, 250, 2000)
+niche_angles <- c(0, 0, 0)
 
-# Create the ellipsoid niche object
+vs <- create_virtual_species(
+  env_bg    = env_stack,
+  center    = niche_center,
+  axes      = niche_axes,
+  angles    = niche_angles,
+  n_occ     = 100,
+  out.suit= "both",
+  distances = TRUE,
+  out.file  = FALSE
+)
+
+vs
+```
+
+You can immediately visualize the virtual species in E-space and G-space:
+
+```{r fig.height=6, fig.width=7}
+env_df <- as.data.frame.nicheR(env_stack)
+
+plot_e_space(env_bg = env_df, vs = vs)
+
+```
+
+```{r fig.height=6, fig.width=7}
+plot_g_space(vs = vs)
+```
+
+---
+
+# Function Overview & All Argument Combinations
+
+This section summarizes the **core functions** in NicheR, their purpose,
+and the main ways to combine their arguments.
+
+The core functions are:
+
+- `build_ellps()` – construct ellipsoid niche in E-space  
+- `get_suitable_env()` – identify environments inside the niche  
+- `set_bias_surface()` – build composite sampling bias surfaces  
+- `get_sample_occ()` – sample virtual occurrences  
+- `plot_e_space()` – visualize in environmental space  
+- `plot_g_space()` – visualize in geographic space  
+- `create_virtual_species()` – full pipeline wrapper  
+- `as.data.frame.nicheR()` – convert large rasters to data frames
+
+Below, each function has its own section with:
+
+- Description  
+- Arguments  
+- Valid combinations  
+- Example usage  
+
+---
+
+## Function: `build_ellps()`
+
+Constructs an ellipsoid in n-dimensional environmental space.
+
+### Description
+
+`build_ellps()` defines an ellipsoid by its:
+
+- centroid (**center**)  
+- semi-axis lengths (**axes**)  
+- optional rotation angles (**angles**)  
+
+The output is a **niche object** used by other functions.
+
+### Arguments
+
+| Argument    | Type    | Description                                      | Required |
+|------------|---------|--------------------------------------------------|----------|
+| `center`   | numeric | Centroid (one value per environmental variable)  | ✔        |
+| `axes`     | numeric | Semi-axis lengths (niche breadth per dimension)  | ✔        |
+| `angles`   | numeric | Rotation angles (optional, defaults to zeros)   | optional |
+| `n_points` | integer | Number of surface points for plotting            | optional |
+| `...`      |         | Additional arguments (e.g. internal options)     | optional |
+
+### Valid combinations
+
+- `center + axes` (axis-aligned ellipsoid)  
+- `center + axes + angles` (rotated ellipsoid)  
+- `center + axes + n_points`  
+- `center + axes + angles + n_points`
+
+### Example
+
+```{r}
 my_niche <- build_ellps(
-  center = niche_center,
-  axes = niche_axes,
-  # angles = niche_angles,
-  n_points = 50 # Resolution for surface points
-)
-```
-
-##### 2. Visualize the Niche in Environmental Space (E-space) 
-
-Function 'plot_e_space()' allows you to visualize e-sapce and the niche ellipsoidal boundary. 
-
-It can generate both static 2D pairwise plots and interactive 3D plots.
-
-##### 3. 2D Pairwise Plots
-
-```{r, fig.width=11, fig.height=8, dpi=300, dpi=300}
-plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  labels = c("Mean T (°C)", "Temp Seasonality", "Annual Prec (mm)"),
-  niche = my_niche, 
-  plot.3d = F
-)
-```
-
-##### 4. 3D Interactive Plot
-
-To render a 3D interactive plot within the same plotting function as 2D, add the argument `plot.3d = TRUE`.  
-
-The code will then generate an interactive **plotly** plot.
-
-
-```{r, rgl=TRUE, eval = FALSE}
-
-plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  labels = c("Mean T (°C)", "Temp Seasonality", "Annual Prec (mm)"),
-  niche = my_niche,
-  plot.3d = TRUE # Toggle 3D plotting by setting plot.3d = TRUE
+  center   = c(mean_temp = 280,
+               annual_precip = 500,
+               temp_seasonality = 7500),
+  axes     = c(75, 300, 1550),
+  angles   = c(0, 0, 0),
+  n_points = 500
 )
 
+my_niche
+
+plot_e_space(env_bg = env_stack,
+             niche = my_niche)
+
 ```
+---
 
-![3D plot Example](man/figures/3D.png)
+## Function: `get_suitable_env()`
 
+Identifies which environmental conditions fall **inside the ellipsoid**
+(D² ≤ 1).
 
-### 4. Extract Suitable Environments and Sample Occurrences 
+### Description
 
-The `get_suitable_env()` function identifies all environmental points that fall within the niche.  
-It includes an argument `out` that can take the values `"spatial"`, `"data.frame"`, or `"both"`.  
+`get_suitable_env()`:
 
-- `"spatial"` returns a **SpatRaster**, allowing visualization of the suitable area in geographic space (G-space).  
-- `"data.frame"` returns a table of points, better suited for visualization in environmental space (E-space).  
-- `"both"` returns both formats simultaneously.
+- Computes the squared Mahalanobis distance between each environmental
+  point and the ellipsoid centroid  
+- Classifies points as inside/outside based on D² ≤ 1  
+- Returns outputs in spatial and/or tabular form
 
+### Arguments
+
+| Argument | Type              | Description                                                                               | Required |
+|----------|-------------------|-------------------------------------------------------------------------------------------|----------|
+| `niche`  | ellipsoid object  | Output from `build_ellps()`                                                               | ✔        |
+| `env_bg` | SpatRaster / df   | Environmental background (rasters, or tabular data)                                       | ✔        |
+| `out`    | character         | `"spatial"`, `"data.frame"`, or `"both"`                                                  | ✔        |
+
+### Valid combinations
+
+- Raster + `"spatial"` – returns `SpatRaster` mask  
+- Raster + `"data.frame"` – returns table of suitable cells  
+- Raster + `"both"`  
+- data.frame + `"data.frame"` – returns subset of rows  
+- data.frame + `"both"` – returns both table and derived raster (if requested internally)
+
+### Examples
 
 ```{r}
-# Extract suitable environmental areas as a spatial raster
+# Spatial (G-space) output: suitable raster
 suitable_g_space <- get_suitable_env(
-  niche = my_niche,
-  env_bg = env_stack, # Use the raster stack for spatial output
-  out = "spatial"
+  niche  = my_niche,
+  env_bg = env_stack,
+  out.suit   = "spatial"
 )
 
-# Plot the suitable area on a map
-plot_g_space(env_stack, show.suitable  = TRUE, niche = my_niche)
-
-```
-
-
-**Note:** For 3D and 2D plotting in E-space, there is no need to run the function beforehand. 
-
-Simply toggle the argument `show.pts.in` in `plot_e_space()`, and the function will automatically calculate and plot the suitable environments.
-
-
-```{r, rgl=TRUE, fig.width=11, fig.height=8, dpi=300}
-# Plot in 2D
-plot_e_space(
+# Tabular (E-space) output
+suitable_df <- get_suitable_env(
+  niche  = my_niche,
   env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  niche = my_niche,
-  show.pts.in = TRUE # Change this argument to TRUE to show suitable environments
+  out.suit = "data.frame",
+  distances = TRUE)
+
+# Both formats
+suitable_both <- get_suitable_env(
+  niche  = my_niche,
+  env_bg = env_stack,
+  out    = "both",
+  distances = TRUE
 )
 
+
+plot_e_space(env_bg = env_stack,
+             niche = my_niche, 
+             suitable_env = suitable_both)
 ```
 
+---
 
-Next, let’s sample some occurrences within the suitable area.  
-The function `get_sample_occ()` draws a subset of points from within the niche boundary and suitable environment.
+## Function: `set_bias_surface()`
 
+Combines one or more layers into a composite **sampling bias surface**.
+
+### Description
+
+`set_bias_surface()`:
+
+- Standardizes each bias layer to [0, 1]  
+- Optionally reverses layers (e.g., distance → proximity)  
+- Multiplies layers together to form a single bias surface  
+- Optionally masks the bias surface with a suitability raster
+
+### Arguments
+
+| Argument       | Type              | Description                                               | Required |
+|----------------|-------------------|-----------------------------------------------------------|----------|
+| `bias_surface` | raster / list     | One or more layers representing potential sampling bias   | ✔        |
+| `bias_dir`     | numeric (1 / -1)  | Direction per layer: 1 = keep, -1 = invert               | ✔        |
+| `suitable_env` | raster / object   | Optional, mask/align with suitability                     | optional |
+| `out.bias`     | character         | `"biased"`, `"standardized"`, or `"both"`                 | optional |
+| `verbose`      | logical           | Print messages                                            | optional |
+
+### Valid combinations
+
+- Single bias layer (e.g., road proximity)  
+- Multiple bias layers (e.g., road proximity + human density)  
+- Direction coded by `bias_dir` (e.g., distance-from-roads with -1)  
+- With or without `suitable_env` mask  
+- Return only standardized stack, only pooled surface, or both
+
+### Example
 
 ```{r}
-# Sample 500 occurrences, biased towards the center of the niche
-sampled_occ_center <- get_sample_occ(
-  n_occ = 500,
-  niche = my_niche,
-  env_bg = env_stack, # Can use raster or data.frame here
+sp_rich   <- terra::rast(system.file("extdata", "sr_sp_host_0.05.tif", package = "NicheR"))
+nighttime <- terra::rast(system.file("extdata", "nighttime.tif",        package = "NicheR"))
+
+bias_obj <- set_bias_surface(
+  bias_surface = c(sp_rich, nighttime),
+  bias_dir     = c(1, -1),
+  suitable_env = suitable_g_space,
+  out.bias     = "both"
+)
+
+names(bias_obj)
+
+```
+
+```{r echo=FALSE, fig.width=10, fig.height=7}
+par(mfrow = c(2, 2), mar = c(4, 4, 4, 2))
+
+plot(bias_obj$directional_bias_stack$sp_richness,
+     main = "Species Richness (Standardized)")
+
+plot(bias_obj$directional_bias_stack$nighttime,
+     main = "Night Time (Standardized + Redirectionalized)")
+
+plot(bias_obj$pooled_bias_sp,
+     main = "Composite Bias Surface")
+
+par(mfrow = c(1, 1))  # reset
+
+```
+
+---
+
+## Function: `get_sample_occ()`
+
+Samples virtual **occurrence points** from suitable conditions.
+
+### Description
+
+`get_sample_occ()`:
+
+- Uses the niche (`niche`) and environmental background (`env_bg`)  
+- Identifies suitable points (D² ≤ 1)  
+- Samples `n_occ` points under a chosen strategy  
+- Optionally applies a bias surface to weight selection
+
+### Arguments
+
+| Argument       | Type                | Description                                             | Required |
+|----------------|---------------------|---------------------------------------------------------|----------|
+| `n_occ`        | integer             | Number of occurrences to sample                         | ✔        |
+| `niche`        | ellipsoid object    | Niche from `build_ellps()`                              | ✔        |
+| `env_bg`       | raster / data.frame | Environmental background                                | ✔        |
+| `method`       | character           | `"random"`, `"center"`, `"edge"`                        | optional |
+| `bias_surface` | raster / df         | Optional bias surface from `set_bias_surface()`         | optional |
+| `seed`         | integer             | Optional random seed for reproducibility                | optional |
+
+### Sampling methods
+
+- `"random"` – all suitable points equally likely  
+- `"center"` – higher weight near niche centroid (low D²)  
+- `"edge"` – higher weight near niche edge (high D² but inside)
+
+### Valid combinations
+
+- Unbiased sampling with `"random"` / `"center"` / `"edge"`  
+- Biased sampling with `bias_surface`  
+- Raster or data.frame environmental background  
+
+### Examples
+
+```{r}
+# 1) Random sampling
+occ_random <- get_sample_occ(
+  n_occ  = 50,
+  suitable_env = suitable_both,
+  method = "random",
+  seed   = 42
+)
+
+# 2) Center-biased sampling
+occ_center <- get_sample_occ(
+  n_occ  = 50,
+  suitable_env = suitable_both,
   method = "center",
-  seed = 42
+  seed   = 42
 )
 
-# Expand right margin so there's room for legend
-plot_g_space(env_bg = env_stack, niche = my_niche,
-             show.suitable = FALSE,
-             occ_pts = sampled_occ_center)
-
+# 3) Edge-biased sampling with a bias surface
+occ_edge_bias <- get_sample_occ(
+  n_occ        = 50,
+  suitable_env = suitable_both,
+  method       = "edge",
+  bias_surface = bias_obj$pooled_bias_sp,
+  seed         = 42
+)
 ```
 
-Visualize Sampled Occurrences in Environmental Space You can integrate
-these simulated occurrences back into your environmental space plots.
+---
 
-```{r, rgl=TRUE, fig.width=11, fig.height=8, dpi=300}
-# Plot in 2D
+## Function: `plot_e_space()`
+
+Visualizes niches and occurrences in **environmental space (E-space)**.
+
+### Description
+
+`plot_e_space()` supports:
+
+- Pairwise 2D scatterplots with ellipsoid boundaries  
+- Optional highlighting of suitable environments  
+- Optional density plots for occurrences  
+- Interactive 3D ellipsoid + points (via `plotly`)
+
+### Arguments (most commonly used)
+
+| Argument           | Description                                              |
+|--------------------|----------------------------------------------------------|
+| `env_bg`           | Background environmental data (data.frame)               |
+| `x`, `y`, `z`      | Names of variables to plot                               |
+| `labels`           | Optional axis labels                                    |
+| `niche`            | Ellipsoid object                                        |
+| `occ_pts`          | Optional occurrence points                              |
+| `suitable_env`      | Suitable env inside the niche                       |
+| `show.occ.density` | Show marginal density of occurrences                    |
+| `plot.3d`          | TRUE → 3D plotly ellipsoid                              |
+| `palette`          | Built-in palette name                                   |
+| `colors`           | Custom named list of hex colors                         |
+
+### Valid combinations
+
+- 2D pairwise plots (x, y only)  
+- 3D plots (x, y, z + `plot.3d = TRUE`)  
+- With or without occurrence points  
+- With or without highlighting suitable environments  
+- Using default palettes or custom colors
+
+### Examples
+
+#### 2D pairwise E-space plot
+
+```{r fig.width=10, fig.height=7}
 plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  niche = my_niche,
-  occ_pts = sampled_occ_center,
-  show.occ.density = TRUE # Change to remove density plots for occurrences points
+  env_bg   = env_stack,
+  x        = "mean_temp",
+  y        = "annual_precip",
+  z        = "temp_seasonality",
+  labels   = c("Mean T (C)", "Annual Prec (mm)", "Temp Seasonality"),
+  niche    = my_niche,
+  suitable_env = suitable_both
 )
-
 ```
 
+#### 3D interactive E-space plot (not evaluated here)
 
-Finally, we visualize all objects in one visualization.
-
-```{r, rgl=TRUE, fig.width=11, fig.height=8, dpi=300}
-# Plot in 2D
+```{r eval = FALSE}
 plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  niche = my_niche,
-  occ_pts = sampled_occ_center,
-  show.pts.in = TRUE, # Highlight background points within niche
-  show.occ.density = TRUE,
-  palette = "default"# Show marginal density plots for occurrences
+  env_bg   = env_df,
+  labels   = c("Mean T (C)",
+               "Annual Prec (mm)",
+               "Temp Seasonality"),
+  niche    = my_niche,
+  suitable_env = suitable_both,
+  plot.3d  = TRUE
 )
+```
+---
 
+## Function: `plot_g_space()`
+
+Visualizes suitability and/or occurrences in **geographic space (G-space)**.
+
+### Description
+
+`plot_g_space()`:
+
+- Uses raster background (`env_bg`) for map context  
+- Can overlay suitable environments  
+- Can overlay occurrence points  
+- Can optionally color by distance to centroid
+
+### Arguments (core)
+
+| Argument        | Description                                               |
+|-----------------|-----------------------------------------------------------|
+| `env_bg`        | Background raster (study area)                            |
+| `niche`         | Ellipsoid object (for suitability)                        |
+| `show.suitable` | TRUE → display suitable area mask                         |
+| `show.distance` | TRUE → continuous distance/suitability map                |
+| `occ_pts`       | Optional occurrence points                                |
+
+### Valid combinations
+
+- Suitability map only  
+- Occurrence points only  
+- Suitability + occurrences  
+- Suitability + distance + occurrences
+
+### Example
+
+```{r fig.height=6, fig.width=7}
+plot_g_space(
+  env_bg        = env_stack,
+  niche         = my_niche,
+  occ_pts       = occ_center
+)
 ```
 
+---
 
-Try some of the other color palettes within the Package!! 
+## Function: `create_virtual_species()`
 
-```{r echo=FALSE, rgl=TRUE}
+High-level **pipeline wrapper** that calls:
 
-  palettes <- list(
+1. `build_ellps()`  
+2. `get_suitable_env()`  
+3. `get_sample_occ()`  
 
+### Description
+
+`create_virtual_species()` builds, projects, and samples from a virtual
+species in a single call, returning a list that can include:
+
+- niche object  
+- suitability outputs  
+- occurrence points  
+- call arguments and more
+
+### Key Arguments (subset)
+
+| Argument    | Description                                        |
+|-------------|----------------------------------------------------|
+| `env_bg`    | environmental background (raster stack)            |
+| `center`    | ellipsoid centroid (vector)                        |
+| `axes`      | ellipsoid semi-axes                                |
+| `angles`    | ellipsoid rotation angles                          |
+| `n_occ`     | number of occurrence points                        |
+| `out`       | `"suitability"`, `"occ"`, or `"both"`              |
+| `distances` | whether to compute D² distances                    |
+| `out.file`  | TRUE to save output to file                        |
+
+### Example
+
+```{r}
+vs_full <- create_virtual_species(
+  env_bg    = env_stack,
+  center    = niche_center,
+  axes      = niche_axes,
+  angles    = niche_angles,
+  n_occ     = 200,
+  out.suit  = "both",
+  distances = TRUE
+)
+
+vs_full
+names(vs_full)
+```
+
+---
+
+## Function: `as.data.frame.nicheR()`
+
+Efficiently converts large rasters to a **disk-backed** data frame suitable
+for E-space operations.
+
+In many cases you can call `as.data.frame()` directly on NicheR rasters,
+but `as.data.frame.nicheR()` methods are designed to be memory-aware.
+
+### Example
+
+```{r}
+env_df <- as.data.frame.nicheR(env_stack, verbose = TRUE)
+head(env_df)
+```
+
+---
+
+# Color Palettes and Custom Colors
+
+NicheR includes multiple **built-in palettes** for consistent plotting.
+
+You can explore and compare them like this:
+
+```{r echo = FALSE, message = FALSE, warning = FALSE, fig.width=10, fig.height=5}
+palettes <- list(
   default = list(
     bg           = "#9093A2FF",
     ellipsoid    = "#2A363BFF",
     centroid     = "#D72000FF",
     tolerance    = "#EE6100FF",
     suitable_env = "#FED789FF",
-    occ          = "#B4BF3AFF"),
-
+    occ          = "#B4BF3AFF"
+  ),
   palette2 = list(
     bg           = "#9CA9BAFF",
     ellipsoid    = "#3D619DFF",
     centroid     = "#345084FF",
     tolerance    = "#693829FF",
     suitable_env = "#CFB267FF",
-    occ          = "#A56A3EFF"),
-
-
+    occ          = "#A56A3EFF"
+  ),
   palette3 = list(
     bg           = "#C8CCC6FF",
     ellipsoid    = "#023743FF",
     centroid     = "#72874EFF",
     tolerance    = "#476F84FF",
     suitable_env = "#FED789FF",
-    occ          = "#A4BED5FF"),
-
+    occ          = "#A4BED5FF"
+  ),
   palette4 = list(
     bg           = "#C0D1CEFF",
     ellipsoid    = "#859B6CFF",
     centroid     = "#B74954FF",
     tolerance    = "#A99364FF",
     suitable_env = "#C2DDB2FF",
-    occ          = "#EBA49EFF"),
-
+    occ          = "#EBA49EFF"
+  ),
   palette5 = list(
     bg           = "#A89F8EFF",
     ellipsoid    = "#7887A4FF",
     centroid     = "#A8CDECFF",
     tolerance    = "#682C37FF",
     suitable_env = "#F6955EFF",
-    occ          = "#9B6981FF"),
-
-
+    occ          = "#9B6981FF"
+  ),
   palette6 = list(
     bg           = "#D3D4D8FF",
     ellipsoid    = "#731A12FF",
     centroid     = "#F2D43DFF",
     tolerance    = "#3F858CFF",
     suitable_env = "#D9814EFF",
-    occ          = "#707322FF")
-
+    occ          = "#707322FF"
   )
+)
 
-df <- do.call(rbind, lapply(names(palettes), function(pname) {
+df_pal <- do.call(rbind, lapply(names(palettes), function(pname) {
   data.frame(
     palette = pname,
-    role    = factor(names(palettes[[pname]]), 
+    role    = factor(names(palettes[[pname]]),
                      levels = c("bg", "ellipsoid", "centroid",
                                 "tolerance", "suitable_env", "occ")),
-                     color   = unlist(palettes[[pname]]),
-                     stringsAsFactors = FALSE
-    )
+    color   = unlist(palettes[[pname]]),
+    stringsAsFactors = FALSE
+  )
 }))
 
-ggplot(df, aes(x = role, y = palette, fill = color)) +
+library(ggplot2)
+
+ggplot(df_pal, aes(x = role, y = palette, fill = color)) +
   geom_tile(color = "white", linewidth = 0.5) +
   geom_text(aes(label = color), color = "white", size = 3.5) +
   scale_fill_identity() +
   theme_minimal() +
-  labs(x = NULL, y = NULL, title = "Palette comparison") +
+  labs(x = NULL, y = NULL, title = "NicheR Palette Comparison") +
   theme(
     axis.text.x = element_text(angle = 45, hjust = 1),
-    panel.grid = element_blank()
+    panel.grid  = element_blank()
   )
-
 ```
 
-Example: Palette 4
+You can select a palette by name:
 
-```{r echo = FALSE, fig.width=11, fig.height=8, dpi=300}
+```{r fig.width=10, fig.height=7}
 plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  niche = my_niche,
-  show.pts.in = TRUE, # Highlight background points within niche
-  occ_pts = sampled_occ_center,
-  show.occ.density = TRUE,
-  palette = "palette4"# Show marginal density plots for occurrences
+  env_bg   = env_df,
+  x        = "mean_temp",
+  y        = "temp_seasonality",
+  z        = "annual_precip",
+  niche    = my_niche,
+  occ_pts  = occ_center,
+  palette  = "palette4"
 )
 ```
 
-Example: Palette 6 
+Or provide custom colors:
 
-```{r, echo = FALSE, fig.width=11, fig.height=8, dpi=300}
+```{r fig.width=10, fig.height=7}
 plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  niche = my_niche,
-  show.pts.in = TRUE, # Highlight background points within niche
-  occ_pts = sampled_occ_center,
-  show.occ.density = TRUE,
-  palette = "palette6"# Show marginal density plots for occurrences
-)
-
-```
-
-
-Don’t like these palettes? Provide your own! Use the colors argument with a list of hex codes. If colors are unnamed, they will be assigned in order: bg (background), ellipsoid, centroid, tolerance (axis ranges), suitable_env (environment inside ellipsoid), and occ (occurrence records). Best practice is to use named values, for example:
-
-```{r, fig.width=11, fig.height=8, dpi=300}
-plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  niche = my_niche,
-  show.pts.in = TRUE,
-  occ_pts = sampled_occ_center,
-  show.occ.density = TRUE,
-  colors = list(bg = "lightgrey",
-                ellipsoid = "lightblue", 
-                centroid = "#FF6347", 
-                tolerance = "orange",
-                suitable_env = "#EEEE00",
-                occ = "purple4")
+  env_bg   = env_df,
+  vs = vs_full,
+  colors = list(
+    bg           = "grey90",
+    ellipsoid    = "steelblue3",
+    centroid     = "#FF6347",
+    tolerance    = "orange",
+    suitable_env = "#EEEE00",
+    occ          = "purple4"
   )
-
+)
 ```
 
-**Note**: for 3D plotting is better to provide the HEX color codes! 
+Note: For 3D plotting it is best to use HEX color codes.
 
-Want to save your plot in high resolution, publication-ready format? Below is an example of how to save it as a TIFF with recommended sizing for 2D plots.
+---
 
-```{r echo=TRUE, eval=FALSE}
+# Saving Publication-Ready Figures
 
-tiff(filename = "NicheR_plot2D.tiff", width = 11, height = 8, 
-     units = "in", res = 300, compression = "lzw")
+You can save high-resolution plots using base R graphics:
+
+```{r eval = FALSE}
+tiff(filename = "NicheR_plot2D.tiff",
+     width = 11, height = 8,
+     units = "in", res = 300,
+     compression = "lzw")
 
 plot_e_space(
-  env_bg = env_df,
-  x = "mean_temp",
-  y = "temp_seasonality",
-  z = "annual_precip",
-  labels = c("Mean T (°C)", "Temp Seasonality", "Annual Prec (mm)"),
-  niche = my_niche,
-  show.pts.in = TRUE, 
-  occ_pts = sampled_occ_center,
+  env_bg   = env_df,
+  vs = vs_full,
+  labels   = c("Mean T (°C)", "Temp Seasonality", "Annual Prec (mm)"),
   show.occ.density = TRUE,
-  palette = "palette3"
+  palette  = "palette3"
 )
 
 dev.off()
-
 ```
 
-# Apply Bias Surface
+---
 
-```{r}
-sp_rich <- terra::rast(system.file("extdata", "sr_sp_host_0.05.tif", package = "NicheR"))
-nighttime <- terra::rast(system.file("extdata", "nighttime.tif", package = "NicheR"))
-Bias <- apply_bias_surface(bias_surface = c(sp_rich, nighttime), 
-                             bias_direction = c(1, -1), 
-                             ecological_suitability = suitable_g_space)
-```
+# Contributing
 
+We welcome contributions!
 
-### Contributing 
-We welcome contributions! If you have suggestions, bug
-reports, or would like to contribute code, please feel free to open an
-issue or submit a pull request on the NicheR GitHub repository.
+If you have:
+
+- suggestions,  
+- bug reports, or  
+- would like to contribute code,
+
+please open an issue or submit a pull request on the **NicheR** GitHub repository.
+
+When contributing, please:
+
+- keep functions documented with roxygen2,  
+- include minimal reproducible examples, and  
+- add tests whenever appropriate.
+
+Thank you for helping improve NicheR!
